k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: photo.solobit.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-service
                port:
                  number: 8080
